instructions.InstructionsDrawG.scala.error
Compilation error:
InstructionsDrawG:1: error: ')' expected but ';' found.
setCouleurBrosse(c:Color;blue)
                        ^InstructionsDrawG:1: error: ';' expected but ')' found.
setCouleurBrosse(c:Color;blue)
                             ^