instructions.InstructionsDrawG.scala.code
setCouleurBrosse(c:Color;blue)
baisseBrosse()
gauche()
avance()
avance()
avance()
avance()